--- a/Login.html
+++ b/Login.html
@@ -10,17 +10,31 @@
 </head>
 
 <body>
-    <!-- 
-    <div>
-        <h2>K-VER</h2>
-        <p>Usuario:</p>
-         <label></label>
-        <p>Contraseña:</p>
-        <input type="submit" value="Registrarse">
-        <input type="submit" value="Entrar">
-    </div> 
-    -->
+
+    <main>
+    <div class="login-box">
+        <h1>Login</h1>
+        <form>
+            <!--usuario-->
+            <label>Usuario</label>
+            <imput>Escriba aquí su usuario</imput>
+
+            <!--contraseña-->
+            <label>Contraseña</label>
+            <imput>Escriba aquí su contraseña</imput>
+
+            <imput type="submit" value="Entrar">
+
+            <a href="#">He olvidado mi contraseña</a>
+            <a href="#">No tengo cuenta</a>
+        </form>
+    </div>
+
+    <!--cuadro de peliculas que se actualiza solo, cogido de internet-->
     <div class="cuadro-izq-fuera">
+        <div class="cuadro-izq-fuera-interior">
+            <center><h1><div class="izquierda">K</div><div class="centro">-</div><div class="derecha">VER</div></h1></center>
+        </div>
         <svg viewBox="0 0 474 900" fill="none" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid slice"
             class="w-full h-full position-absolute" style="inset: 0px;">
@@ -188,7 +202,7 @@
             </defs>
         </svg>
     </div>
-
+</main>
 </body>
 
 </html>
