--- a/Login.html
+++ b/Login.html
@@ -13,6 +13,7 @@
 
     <main>
     <div class="login-box">
+        <div class="logotipo"><img src="recursos/iconfinder-video-film-camera-movie-photography-4593167_122280.ico"></div>
         <h1>Login</h1>
         <form>
             <!--usuario-->
