--- a/Login.html
+++ b/Login.html
@@ -14,7 +14,7 @@
     <main>
     <div class="login-box">
         <div class="logotipo"><img src="recursos/iconfinder-video-film-camera-movie-photography-4593167_122280.ico"></div>
-        <h1>Login</h1>
+        <h1>Entra en K-VER</h1>
         <form>
             <!--usuario-->
             <label>Usuario</label>
@@ -30,6 +30,16 @@
             <a href="#">No tengo cuenta</a>
         </form>
     </div>
+
+    <div class="registrarse">
+    <span class="no-eres-usuario">
+      ¿No eres usuario de K-VER?
+    </span>
+    <button type="button" class="boton-registro" data-init="switch-to-register">
+      Regístrate
+    </button>
+
+  </div>
 
     <!--cuadro de peliculas que se actualiza solo, cogido de internet-->
     <div class="cuadro-izq-fuera">
