--- a/Login.html
+++ b/Login.html
@@ -14,21 +14,33 @@
     <main>
     <div class="login-box">
         <div class="logotipo"><img src="recursos/iconfinder-video-film-camera-movie-photography-4593167_122280.ico"></div>
-        <h1>Entra en K-VER</h1>
-        <form>
+        </br> 
+        </br> 
+        </br> 
+        </br> 
+        <center><h1>Entra en K-VER</h1></center>
+        <center><form>
             <!--usuario-->
             <label>Usuario</label>
-            <imput>Escriba aquí su usuario</imput>
+        </br> 
+            <input type="text" placeholder="Escriba su usuario"></input>
+        </br>
+        </br>
 
             <!--contraseña-->
             <label>Contraseña</label>
-            <imput>Escriba aquí su contraseña</imput>
-
-            <imput type="submit" value="Entrar">
-
+        </br>
+            <input type="password" placeholder="Escriba su contraseña"></input>
+        </br>
+        </br>
+        <button type="button" class="boton-entrar" data-init="switch-to-enter">
+            ENTRAR
+          </button>
+        </br>
+        </br>
+        </br>
             <a href="#">He olvidado mi contraseña</a>
-            <a href="#">No tengo cuenta</a>
-        </form>
+        </form></center>
     </div>
 
     <div class="registrarse">
