--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,8 @@
 
     <main>
     <div class="login-box">
-        <div class="logotipo"><img src="recursos/iconfinder-video-film-camera-movie-photography-4593167_122280.ico"></div>
+        <center><div class="logotipo"><img src="recursos/iconfinder-video-film-camera-movie-photography-4593167_122280.ico"></div>
+        </center>
         </br> 
         </br> 
         </br> 
@@ -31,6 +32,7 @@
             <label>Contraseña</label>
         </br>
             <input type="password" placeholder="Escriba su contraseña"></input>
+        </br>
         </br>
         </br>
         <button type="button" class="boton-entrar" data-init="switch-to-enter">
