Elementos separados y actualizacion visual
Separado en documento html, con css y js linkeados, actualizado diseño para que se vea mejor y sea responsive

--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -30,114 +30,8 @@
     </div>
   
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script>
-      // Variables globales
-      let players = [];
-  
-      // Función para inicializar los reproductores de YouTube
-      function onYouTubeIframeAPIReady() {
-        players.push(new YT.Player('player1', {
-          height: '100%',
-          width: '100%',
-          videoId: 'FSyWAxUg3Go', // ID del Trailer
-          playerVars: {
-            autoplay: 0,
-            controls: 1,
-            rel: 0,
-            showinfo: 0,
-            fs: 1,
-            playsinline: 1
-          }
-        }));
-  
-        players.push(new YT.Player('player2', {
-          height: '100%',
-          width: '100%',
-          videoId: 'vsJgLu3PIno', // ID del Trailer
-          playerVars: {
-            autoplay: 0,
-            controls: 1,
-            rel: 0,
-            showinfo: 0,
-            fs: 1,
-            playsinline: 1
-          }
-        }));
-  
-        players.push(new YT.Player('player3', {
-          height: '100%',
-          width: '100%',
-          videoId: 'OyWBqbgk980', // ID del Trailer
-          playerVars: {
-            autoplay: 0,
-            controls: 1,
-            rel: 0,
-            showinfo: 0,
-            fs: 1,
-            playsinline: 1
-          }
-        }));
-      }
-  
-      // Función para cargar y reproducir el video
-      function cargarVideo(videoId, player) {
-        player.loadVideoById(videoId);
-      }
-  
-      // Función para buscar y cargar el video según el término de búsqueda
-      function buscarTrailer() {
-        const searchTerm = document.getElementById('search-input').value;
-        // Realizar la búsqueda del trailer por nombre de película (implementación personalizada)
-        const videoId = buscarTrailerPorNombre(searchTerm);
-        if (videoId) {
-          for (let i = 0; i < players.length; i++) {
-            cargarVideo(videoId, players[i]);
-          }
-        }
-      }
-  
-      // Función para buscar el trailer por nombre de película (implementación personalizada)
-      function buscarTrailerPorNombre(nombrePelicula) {
-        // Implementación personalizada para buscar el trailer por nombre de película
-        // Retorna el ID del video de YouTube correspondiente al trailer encontrado
-        // Puedes implementar esta función de acuerdo a tus necesidades
-  
-        // Ejemplo de búsqueda por nombre de película
-        if (nombrePelicula === 'Avengers: Endgame') {
-          return 'TcMBFSGVi1c';
-        } else if (nombrePelicula === 'The Dark Knight') {
-          return 'EXeTwQWrcwY';
-        } else if (nombrePelicula === 'Inception') {
-          return 'YoHD9XEInc0';
-        } else {
-          return null;
-        }
-      }
-  
-      // Evento para mostrar/ocultar el campo de búsqueda al hacer clic en el botón de búsqueda
-      const searchButton = document.getElementById('search-button');
-      const searchInput = document.getElementById('search-input');
-      searchButton.addEventListener('click', function() {
-        const searchPanel = document.querySelector('.search-panel');
-        searchPanel.classList.toggle('active');
-        searchInput.focus();
-      });
-  
-      // Evento para buscar al presionar Enter en el campo de búsqueda
-      searchInput.addEventListener('keypress', function(event) {
-        if (event.key === 'Enter') {
-          buscarTrailer();
-        }
-      });
-  
-      // Evento para cargar los trailers iniciales al hacer clic en el botón de inicio
-      const homeButton = document.getElementById('home-button');
-      homeButton.addEventListener('click', function() {
-        cargarVideo('FSyWAxUg3Go', players[0]);
-        cargarVideo('vsJgLu3PIno', players[1]);
-        cargarVideo('OyWBqbgk980', players[2]);
-      });
-    </script>
+    <script src="jscrip_PaginaPrincipal.js"></script>
   </body>
 </html>
+
 
