Optimizada funcion buscar
Corregida para que al usarlo te lanze la busqueda y te deje elegir entre todos los videos de trailer, también cambiado el texto antes de rellenar del search-input

--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -14,7 +14,7 @@
     <div class="search-panel">
       <button id="home-button">Inicio</button>
       <button id="search-button" class="search-icon">Buscar</button>
-      <input type="text" id="search-input" placeholder="Buscar por nombre de película">
+      <input type="text" id="search-input" placeholder="Nombre de película">
     </div>
     
     <div class="video-container">
