inprementación de js

--- a/Login.html
+++ b/Login.html
@@ -42,7 +42,7 @@
                     </br>
                     </br>
                     </br>
-                    <button type="button" class="boton-entrar" data-init="switch-to-enter">
+                    <button type="button" class="boton-entrar" data-init="switch-to-enter" onclick="login()">
                         ENTRAR
                     </button>
                     </br>
@@ -269,6 +269,7 @@
             </svg>
         </div>
     </main>
+    <script src="jscrip_login.js"></script>
 </body>
 
 </html>
