incorporación de id en input de html

--- a/Login.html
+++ b/Login.html
@@ -31,14 +31,14 @@
                     <!--usuario-->
                     <label>Usuario</label>
                     </br>
-                    <input type="text" placeholder="Escriba su usuario"></input>
+                    <input id="usuario" type="text" placeholder="Escriba su usuario"></input>
                     </br>
                     </br>
 
                     <!--contraseña-->
                     <label>Contraseña</label>
                     </br>
-                    <input type="password" placeholder="Escriba su contraseña"></input>
+                    <input id="contraseña" type="password" placeholder="Escriba su contraseña"></input>
                     </br>
                     </br>
                     </br>
